<resources>
    <string name="app_name">My Calendar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="view_pager_image">view pager image</string>
    <string name="share">Share</string>
    <string name="rate">Rate Us</string>
    <string name="contact">Contact us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="about">"About"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>