<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:iconTint="@color/black"
            android:title="@string/share" />

        <item android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate" />

        <item android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact" />

        <item android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy" />

        <item android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>